Added opimd and odeviced to build system A few fixes to Makefile.am
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -28,5 +28,7 @@ Makefile
 src/Makefile
 src/ogsmd/Makefile
 src/ousaged/Makefile
+src/opimd/Makefile
+src/odeviced/Makefile
 libfreesmartphone-glib.pc
 ])
