--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,10 @@
-SUBDIRS = ogsmd ousaged
+SUBDIRS = ogsmd ousaged opimd odeviced
 
 dbus_archives = \
 	ogsmd/libogsmd.la \
-	ousaged/libousaged.la
+	ousaged/libousaged.la \
+	opimd/libopimd.la \
+	odeviced/libodeviced.la
 
 AM_CPPFLAGS = -DDATADIR=\"$(datadir)\" \
 	      -DPKGDATADIR=\"$(pkgdatadir)\" \
