--- a/src/ousaged/Makefile.am
+++ b/src/ousaged/Makefile.am
@@ -33,8 +33,10 @@ libfreesmartphone_glib_HEADERS = \
 libfreesmartphone_glibdir = $(includedir)/freesmartphone-glib/ousaged
 
 CLEANFILES = \
-	$(BUILT_SOURCES) \
-	dbus
+	$(BUILT_SOURCES)
 
 MAINTAINERCLEANFILES = \
 	Makefile.in
+
+clean-local:
+	$(RM) -R dbus
