Added Device.Audio with related errors Added dbus type matching 'y' to guint8
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,3 +6,6 @@ MAINTAINERCLEANFILES = aclocal.m4 compile config.guess config.sub \
                        configure depcomp install-sh  \
                        Makefile.in missing ltmain.sh \
                        mkinstalldirs config.h.in config.h.in~ INSTALL
+
+maintainer-clean-local:
+	$(RM) -R m4
