--- a/src/opimd/Makefile.am
+++ b/src/opimd/Makefile.am
@@ -16,7 +16,15 @@ BUILT_SOURCES = \
 	dbus/call.xml \
 	dbus/call.h \
 	dbus/calls.xml \
-	dbus/calls.h
+	dbus/calls.h \
+	dbus/contactquery.xml \
+	dbus/contactquery.h \
+	dbus/contact.xml \
+	dbus/contact.h \
+	dbus/contacts.xml \
+	dbus/contacts.h \
+	dbus/fields.xml \
+	dbus/fields.h
 
 DBUS_OPIMD_SOURCES = \
 	callquery.c \
@@ -25,13 +33,25 @@ DBUS_OPIMD_SOURCES = \
 	call.h \
 	calls.c \
 	calls.h \
+	contactquery.c \
+	contactquery.h \
+	contact.c \
+	contact.h \
+	contacts.c \
+	contacts.h \
+	fields.c \
+	fields.h \
 	dbus.h
 
 $(BUILT_SOURCES): Makefile
 	$(top_srcdir)/tools/dbus-rapid-bindings.py . minimal freesmartphone-glib opimd org.freesmartphone.opimd \
 	$(xmldir)/org.freesmartphone.PIM.CallQuery.xml \
 	$(xmldir)/org.freesmartphone.PIM.Call.xml \
-	$(xmldir)/org.freesmartphone.PIM.Calls.xml
+	$(xmldir)/org.freesmartphone.PIM.Calls.xml \
+	$(xmldir)/org.freesmartphone.PIM.ContactQuery.xml \
+	$(xmldir)/org.freesmartphone.PIM.Contact.xml \
+	$(xmldir)/org.freesmartphone.PIM.Contacts.xml \
+	$(xmldir)/org.freesmartphone.PIM.Fields.xml
 
 libopimd_la_SOURCES = \
 	$(DBUS_OPIMD_SOURCES)
@@ -40,6 +60,10 @@ libfreesmartphone_glib_HEADERS = \
 	call.h \
 	calls.h \
 	callquery.h \
+	contact.h \
+	contacts.h \
+	contactquery.h \
+	fields.h \
 	dbus.h
 
 libfreesmartphone_glibdir = $(includedir)/freesmartphone-glib/opimd
