Added PIM.Message family
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/src/opimd/Makefile.am
+++ b/src/opimd/Makefile.am
@@ -11,6 +11,8 @@ noinst_LTLIBRARIES = libopimd.la
 
 BUILT_SOURCES = \
 	$(DBUS_OPIMD_SOURCES) \
+	dbus/fields.xml \
+	dbus/fields.h \
 	dbus/callquery.xml \
 	dbus/callquery.h \
 	dbus/call.xml \
@@ -23,10 +25,19 @@ BUILT_SOURCES = \
 	dbus/contact.h \
 	dbus/contacts.xml \
 	dbus/contacts.h \
-	dbus/fields.xml \
-	dbus/fields.h
+	dbus/messagequery.xml \
+	dbus/messagequery.h \
+	dbus/messagefolder.xml \
+	dbus/messagefolder.h \
+	dbus/message.xml \
+	dbus/message.h \
+	dbus/messages.xml \
+	dbus/messages.h
 
 DBUS_OPIMD_SOURCES = \
+	dbus.h \
+	fields.c \
+	fields.h \
 	callquery.c \
 	callquery.h \
 	call.c \
@@ -39,32 +50,45 @@ DBUS_OPIMD_SOURCES = \
 	contact.h \
 	contacts.c \
 	contacts.h \
-	fields.c \
-	fields.h \
-	dbus.h
+	messagequery.c \
+	messagequery.h \
+	messagefolder.c \
+	messagefolder.h \
+	message.c \
+	message.h \
+	messages.c \
+	messages.h
 
 $(BUILT_SOURCES): Makefile
 	$(top_srcdir)/tools/dbus-rapid-bindings.py . minimal freesmartphone-glib opimd org.freesmartphone.opimd \
+	$(xmldir)/org.freesmartphone.PIM.Fields.xml \
 	$(xmldir)/org.freesmartphone.PIM.CallQuery.xml \
 	$(xmldir)/org.freesmartphone.PIM.Call.xml \
 	$(xmldir)/org.freesmartphone.PIM.Calls.xml \
 	$(xmldir)/org.freesmartphone.PIM.ContactQuery.xml \
 	$(xmldir)/org.freesmartphone.PIM.Contact.xml \
 	$(xmldir)/org.freesmartphone.PIM.Contacts.xml \
-	$(xmldir)/org.freesmartphone.PIM.Fields.xml
+	$(xmldir)/org.freesmartphone.PIM.MessageFolder.xml \
+	$(xmldir)/org.freesmartphone.PIM.MessageQuery.xml \
+	$(xmldir)/org.freesmartphone.PIM.Messages.xml \
+	$(xmldir)/org.freesmartphone.PIM.Message.xml
 
 libopimd_la_SOURCES = \
 	$(DBUS_OPIMD_SOURCES)
 
 libfreesmartphone_glib_HEADERS = \
+	dbus.h \
+	fields.h \
 	call.h \
 	calls.h \
 	callquery.h \
 	contact.h \
 	contacts.h \
 	contactquery.h \
-	fields.h \
-	dbus.h
+	messagefolder.h \
+	messagequery.h \
+	messages.h \
+	message.h
 
 libfreesmartphone_glibdir = $(includedir)/freesmartphone-glib/opimd
 
