--- a/src/ousaged/Makefile.am
+++ b/src/ousaged/Makefile.am
@@ -12,22 +12,28 @@ noinst_LTLIBRARIES = libousaged.la
 BUILT_SOURCES = \
 	$(DBUS_OUSAGED_SOURCES) \
 	dbus/usage.xml \
-	dbus/usage.h
+	dbus/usage.h \
+	dbus/notifications.xml \
+	dbus/notifications.h
 
 DBUS_OUSAGED_SOURCES = \
 	usage.c \
 	usage.h \
+	notifications.c \
+	notifications.h \
 	dbus.h
 
 $(BUILT_SOURCES): Makefile
 	$(top_srcdir)/tools/dbus-rapid-bindings.py . minimal freesmartphone-glib ousaged org.freesmartphone.ousaged \
-	$(xmldir)/org.freesmartphone.Usage.xml
+	$(xmldir)/org.freesmartphone.Usage.xml \
+	$(xmldir)/org.freesmartphone.Notifications.xml
 
 libousaged_la_SOURCES = \
 	$(DBUS_OUSAGED_SOURCES)
 
 libfreesmartphone_glib_HEADERS = \
 	usage.h \
+	notifications.h \
 	dbus.h
 
 libfreesmartphone_glibdir = $(includedir)/freesmartphone-glib/ousaged
