Depending on external XML specs from now on
Internally maintained XML files are being removed, in favour
of small custom XML files defining only the special aspects of
library generation. Format is very simple, just read one as an
example :)

Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([libfreesmartphone-glib], [0.2], [daniele.athome@gmail.com], [libfreesmartphone-glib])
+AC_INIT([libfreesmartphone-glib], [2010.10.15.1], [daniele.athome@gmail.com], [libfreesmartphone-glib])
 AC_CONFIG_SRCDIR(Makefile.am)
 AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_MACRO_DIR([m4])
@@ -13,11 +13,27 @@ AC_PROG_CC
 AC_STDC_HEADERS
 AC_LIBTOOL_DLOPEN
 
-dnl glib-genmarshal
+# glib-genmarshal
 AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
 
-# base deps
-PKG_CHECK_MODULES(DBUS, dbus-glib-1)
+GLIB_REQUIRED=2.12.0
+DBUS_REQUIRED=0.70
+SPECS_REQUIRED=$PACKAGE_VERSION
+
+# glib/dbus
+PKG_CHECK_MODULES(DEPS,
+    glib-2.0 >= $GLIB_REQUIRED
+    gobject-2.0 >= $GLIB_REQUIRED
+    dbus-glib-1 >= $DBUS_REQUIRED
+    dbus-1 >= $DBUS_REQUIRED)
+
+# fso specs
+PKG_CHECK_MODULES(SPECS,
+    fso-specs >= $SPECS_REQUIRED)
+
+# specs directory
+FSO_SPECS_DIR="`$PKG_CONFIG --variable=specsdir fso-specs`"
+AC_SUBST(FSO_SPECS_DIR)
 
 AC_SUBST(DBUS_CFLAGS)
 AC_SUBST(DBUS_LIBS)
