--- a/src/ousaged/Makefile.am
+++ b/src/ousaged/Makefile.am
@@ -2,10 +2,11 @@ AM_CPPFLAGS = -DDATADIR=\"$(datadir)\" \
 	      -DPKGDATADIR=\"$(pkgdatadir)\" \
 	      -DG_LOG_DOMAIN=\"libfreesmartphone-glib\"
 
-AM_CFLAGS = -Wall -Wextra -Werror @DBUS_CFLAGS@ -I..
-AM_LDFLAGS = @DBUS_LIBS@
+AM_CFLAGS = -Wall -Wextra -Werror @DEPS_CFLAGS@ -I..
+AM_LDFLAGS = @DEPS_LIBS@
 
-xmldir = $(top_srcdir)/xml
+xmldir = @FSO_SPECS_DIR@
+cfgdir = $(top_srcdir)/cfg
 
 noinst_LTLIBRARIES = libousaged.la
 
@@ -20,8 +21,8 @@ DBUS_OUSAGED_SOURCES = \
 	dbus.h
 
 $(BUILT_SOURCES): Makefile
-	$(top_srcdir)/tools/dbus-rapid-bindings.py . minimal freesmartphone-glib ousaged org.freesmartphone.ousaged \
-	$(xmldir)/org.freesmartphone.Usage.xml
+	$(top_srcdir)/tools/dbus-rapid-bindings.py . minimal freesmartphone-glib ousaged org.freesmartphone.ousaged "$(cfgdir)" \
+	"$(xmldir)/org.freesmartphone.Usage.xml"
 
 libousaged_la_SOURCES = \
 	$(DBUS_OUSAGED_SOURCES)
