Added org.freedesktop.Gypsy group
Signed-off-by: Daniele Ricci <daniele.athome@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -46,5 +46,6 @@ src/ogsmd/Makefile
 src/ousaged/Makefile
 src/opimd/Makefile
 src/odeviced/Makefile
+src/gypsy/Makefile
 libfreesmartphone-glib.pc
 ])
